--- a/build.xml
+++ b/build.xml
@@ -35,7 +35,7 @@
   <!--Creates the deployable jar file  -->
   <target name="jar" depends="compile">
 <!--    <jar destfile="${dist.dir}\rectangle_${env.MAJOR_VERSION}.${env.BUILD_NUMBER}.jar" basedir="${build.dir}"> -->
-        <jar destfile="${dist.dir}\rectangle.jar" basedir="${build.dir}">
+	<jar destfile="${dist.dir}\rectangle.jar" basedir="${build.dir}">
       <manifest>
         <attribute name="Main-Class" value="Rectangulator" />
       </manifest>
@@ -45,3 +45,5 @@
   <target name="main" depends="compile, jar">
     <description>Main target</description>
   </target>
+
+</project>
